Added call routing to swagger yaml and fixed some backend route calls
